[package]
name = "redescription"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
captrs = "0.3.1"
opencv = "0.63.1"
scraper = "0.12.0"
serde = { version ="1.0.130", features = ["derive"] }
serde_json = "1.0.72"
threadpool = "1.8.1"
ureq = "2.4.0"

[profile.release]
incremental = true
